fix scroll bug on ios

--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,7 @@ footer a {
 
   .console {
     height: 300px;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
   }
 }
